Third commit removed passport::routes and added additional routes

--- a/public/job-asset/css/custom.css
+++ b/public/job-asset/css/custom.css
@@ -2710,7 +2710,7 @@ margin-top:20px;
   bottom:10px;
 }
 .bg-image01{
-  background-image: linear-gradient(130deg,#666161,#eb322c) !important;
+  background-image: linear-gradient(130deg,#666161,#0cc0df) !important;
 }
 .text-white{
   color: #ffffff !important;
