--- a/public/job-asset/css/main.css
+++ b/public/job-asset/css/main.css
@@ -12,7 +12,7 @@ font-size:15px;
 color:#636e7b;
 }
 section{
-padding:70px 0px 200px 0px;
+padding:70px 0px 350px 0px;
 }
 h1, h2, h3, h4, h5, h6 {
     color:#242c36;
@@ -33,8 +33,8 @@ background:#f4f5f7;
 }
 .btn-primary, .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
     color: #fff;
-    background-color: #0cc0df;
-    border-color: #0cc0df;
+    background-color: #000000;
+    border-color: #000000;
     text-transform: uppercase;
     border-radius: 2px;
     box-shadow: none;
